some progress in turning successful oauth with google into a logged in session

--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -22,13 +22,28 @@
 			
 			<!-- Header -->
 			<div id="header">
-				<div class="container"> 
-					
+				<div class="container" style="width:100%">
+
+					<!-- Login box -->
+					<div id="login_info" style="float:right; padding:20px; border:1px solid red">
+						hello
+						<!--<img src="https://lh3.googleusercontent.com/a-/AOh14GgMXCSiwfUHSwDUxQAt7OOQT-WOFBb3XW3uBlgKow" style="    display: block;
+    margin: 0 auto;
+    height: auto;
+    width: 50px;
+    margin: 0 0 0 -20%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;  ">-->
+					</div>
+
 					<!-- Logo -->
 					<div id="logo">
 						<h1><a href="/">Octo-Deco</a></h1>
 					</div>
-					
+
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
@@ -42,6 +57,7 @@
 						</ul>
 					</nav>
 				</div>
+
 			</div>
 			<!-- /Header -->
 			
