--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="{{ url_for('static', filename='js/skel.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='js/skel-panels.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='js/init.js') }}"></script>
@@ -25,21 +25,15 @@
 				<div class="container" style="width:100%">
 
 					<!-- Login box -->
-					<div id="login_info" style="float:right; padding:20px; border:1px solid red">
-						hello
-						<!--<img src="https://lh3.googleusercontent.com/a-/AOh14GgMXCSiwfUHSwDUxQAt7OOQT-WOFBb3XW3uBlgKow" style="    display: block;
-    margin: 0 auto;
-    height: auto;
-    width: 50px;
-    margin: 0 0 0 -20%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;  ">-->
-						{{ g.user_details['session_id'] }}
-						<a href="{{ g.user_details.login_link }}">login</a>
+					<div class="login_info">
+						{% if g.user_details.is_logged_in() %}
+						<img class="profile_pic" src="{{ g.user_details['google_picture'] }}">
 						<a href="{{ g.user_details.logout_link }}">logout</a>
+						{% else %}
+						<a href="{{ g.user_details.login_link }}">
+							<img class="google_signin" src="{{ url_for('static', filename='images/google_signin.png') }}">
+						</a>
+						{% endif %}
 					</div>
 
 					<!-- Logo -->
