CSV fixes and improvements, can now re-import CSV files

--- a/octodeco/flaskr/templates/dive/new.html
+++ b/octodeco/flaskr/templates/dive/new.html
@@ -96,14 +96,19 @@
     </div>
 
     <header><h2>Upload CSV file</h2></header>
-    <div>Upload CSV file from a Shearwater dive computer. Only time, depth, and gas are used; all other data
-        (like tissue loading) is recomputed.
+    <div>Upload CSV file from a Shearwater dive computer, or one exported from here.
+        Only time, depth, and gas are used; all other data (like tissue loading) is recomputed.
+    </div>
     <form method="post" action="{{url_for('dive.new_shearwater_csv')}}" enctype="multipart/form-data">
         Shearwater CSV:
-        <input type="file" id="ipt_csv" name="ipt_csv">
-        <input type="submit" value="Go :)" onclick="if(document.getElementById('ipt_csv').files.length == 0) { return false; }">
+        <input type="file" id="ipt_sw_csv" name="ipt_csv">
+        <input type="submit" value="Go :)" onclick="if(document.getElementById('ipt_sw_csv').files.length == 0) { return false; }">
     </form>
-    </div>
+    <form method="post" action="{{url_for('dive.new_octodeco_csv')}}" enctype="multipart/form-data">
+        Octo-Deco CSV:
+        <input type="file" id="ipt_od_csv" name="ipt_csv">
+        <input type="submit" value="Go :)" onclick="if(document.getElementById('ipt_od_csv').files.length == 0) { return false; }">
+    </form>
 
 
     <header><h2>..or just recreate the demo dive:</h2></header>
