Be a bit more helpful for inputs, using javascsript in new.html

--- a/octodeco/flaskr/static/css/style-customs.css
+++ b/octodeco/flaskr/static/css/style-customs.css
@@ -119,6 +119,12 @@ div.depth_times
 }
 
 
+div.new_by_upload input[type="submit"]:disabled
+{
+    color:#909090;
+}
+
+
 /* Login box */
 div.login_info
 {
