--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -157,8 +157,13 @@
     <div class="viztoggle" onclick="togglediv('modifydive', this)">[show]</div>
     </h2>
     <div id="modifydive" style="display:none">
-    <form method="POST" action="{{url_for('dive.delete',id=dive.dive_id)}}">
-    <input type="submit" value="Delete this dive" onclick="return confirm('Sure?');">
+    <form method="POST" action="{{url_for('dive.modify',id=dive.dive_id)}}">
+        <label for="subm_surface_section">Add surface section to end of dive:</label>
+        <input type="submit" name="action_surface_section" id="subm_surface_section"
+               value="Add 30 mins surface">
+        <br/>
+        <label for="subm_delete">Delete:</label>
+        <input type="submit" name="action_delete" id="subm_delete" value="Delete this dive" onclick="return confirm('Sure?');">
     </form>
     </div>
 {% endblock %}
