Some more options for modifying the dive, including flagging it as public (though that has no effect yet)

--- a/octodeco/flaskr/static/css/style-customs.css
+++ b/octodeco/flaskr/static/css/style-customs.css
@@ -156,3 +156,16 @@ div.login_info a:hover {
 }
 
 
+div.modifydive input {
+    width: 12em;
+    padding-left:3px;
+    padding-right: 3px;
+    text-align:left;
+}
+div.modifydive label
+{
+    width: 20em;
+    display: inline-block;
+    text-align: right;
+}
+
