fix style-mobile.css so on mobile the overlaid menu is used (navpanel)

--- a/octodeco/flaskr/static/css/style-mobile.css
+++ b/octodeco/flaskr/static/css/style-mobile.css
@@ -197,10 +197,7 @@
 	
 	#nav
 	{
-		margin:0px;    
-	}
-	#nav li {
-		display:inline;
+		display: none;
 	}
 	
 /*********************************************************************************/
