--- a/octodeco/flaskr/static/css/style-customs.css
+++ b/octodeco/flaskr/static/css/style-customs.css
@@ -17,6 +17,17 @@ div.flash {
     border-width: 0px 0px 0px 5px;
 }
 
+div.flash div.close {
+    float: right;
+    align: right;
+    font-size: 0.5em;
+    margin: -0.5em -0.5em 0 0;
+}
+div.flash div.close a {
+    color: #505050;
+    text-decoration: none;
+}
+
 /*
  * Sidebar items
  */
