--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -45,10 +45,10 @@
 					<nav id="nav">
 						<ul>
 							{% for x in config['NAV_ITEMS'] %}
-								{% if request.path.startswith(url_for(x[0])) %}
-								<li class="active"><a href="{{ url_for(x[0]) }}">{{x[1]}}</a></li>
+								{% if request.path.startswith(x[1]) %}
+								<li class="active"><a href="{{ url_for(x[0]) }}">{{x[2]}}</a></li>
 								{% else %}
-								<li><a href="{{ url_for(x[0]) }}">{{x[1]}}</a></li>
+								<li><a href="{{ url_for(x[0]) }}">{{x[2]}}</a></li>
 								{% endif %}
 							{% endfor %}
 						</ul>
