--- a/octodeco/flaskr/templates/user/info.html
+++ b/octodeco/flaskr/templates/user/info.html
@@ -26,7 +26,11 @@
     <h2>Dives</h2>
     <ul>
         {% for row in diveinfos %}
-        <li>{{ row['dive_id'] }} : {{ row['dive_desc'] }}</li>
+        <li>
+            {{ row['dive_id'] }} :
+            <a href="{{url_for('dive.show', dive_id=row['dive_id'])}}">{{ row['dive_desc'] }}</a>
+            {% if row['is_public'] %}(Public){% endif %}
+        </li>
         {% endfor %}
     </ul>
 {% endblock %}
