--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -29,7 +29,7 @@
     <li><span class="fa fa-chevron-circle-right"></span><a href="#aheatmap">Heatmap</a></li>
     <li><span class="fa fa-chevron-circle-right"></span><a href="#afulldata">Full dive data</a></li>
     {% if modify_allowed %}
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#amodifydive">Modify</a></li>f
+    <li><span class="fa fa-chevron-circle-right"></span><a href="#amodifydive">Modify</a></li>
     {% endif %}
 {% endblock %}
 
