--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -5,6 +5,21 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link rel="apple-touch-icon" sizes="57x57" href="{{url_for('static', filename='images/favicon/apple-icon-57x57.png')}}">
+		<link rel="apple-touch-icon" sizes="60x60" href="{{url_for('static', filename='images/favicon/apple-icon-60x60.png')}}">
+		<link rel="apple-touch-icon" sizes="72x72" href="{{url_for('static', filename='images/favicon/apple-icon-72x72.png')}}">
+		<link rel="apple-touch-icon" sizes="76x76" href="{{url_for('static', filename='images/favicon/apple-icon-76x76.png')}}">
+		<link rel="apple-touch-icon" sizes="114x114" href="{{url_for('static', filename='images/favicon/apple-icon-114x114.png')}}">
+		<link rel="apple-touch-icon" sizes="120x120" href="{{url_for('static', filename='images/favicon/apple-icon-120x120.png')}}">
+		<link rel="apple-touch-icon" sizes="144x144" href="{{url_for('static', filename='images/favicon/apple-icon-144x144.png')}}">
+		<link rel="apple-touch-icon" sizes="152x152" href="{{url_for('static', filename='images/favicon/apple-icon-152x152.png')}}">
+		<link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', filename='images/favicon/apple-icon-180x180.png')}}">
+		<link rel="icon" type="image/png" sizes="192x192" href="{{url_for('static', filename='images/favicon/android-icon-192x192.png')}}">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='images/favicon/favicon-32x32.png')}}">
+		<link rel="icon" type="image/png" sizes="96x96" href="{{url_for('static', filename='images/favicon/favicon-96x96.png')}}">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='images/favicon/favicon-16x16.png')}}">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="{{url_for('static', filename='images/favicon/ms-icon-144x144.png')}}">
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="{{ url_for('static', filename='js/skel.min.js') }}"></script>
@@ -126,8 +141,9 @@
 			<!-- Copyright -->
 			<div id="copyright">
 				<div class="container">
-					<p>Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).
-					<p>Design: Synchronous by <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+					<p>Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).</p>
+					<p>Site design: Synchronous by <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
+					<p>Favicon by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 				</div>
 			</div>
 			
