--- a/octodeco/flaskr/static/css/style-customs.css
+++ b/octodeco/flaskr/static/css/style-customs.css
@@ -92,6 +92,18 @@ div.chart {
     margin-right: 0px;
 }
 
+div.chart.placeholder
+{
+    height: 220px;
+    margin: 3em;
+    background-color:#eaeaea;
+    text-align:center;
+}
+div.chart.placeholder img
+{
+    vertical-align:middle;
+}
+
 div.viztoggle {
     display: inline;
     font-size: 0.5em;
