UWSGI now using file system cache (works better across threads). plus assorted small settings in nginx and uwsgi

--- a/config/docker-flask/scripts/flask_settings.sh.tmpl
+++ b/config/docker-flask/scripts/flask_settings.sh.tmpl
@@ -4,3 +4,4 @@ export FLASK_APP=octodeco/flaskr
 export FLASK_INSTANCE_PATH=/flask_instance
 export FLASK_SECRET_KEY=abcd
 export GOOGLE_OAUTH_JSON=/scripts/client_secret.json
+export FLASK_CACHE_DIR=/tmp
